// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`borderLeftColor renders 0 1`] = `
Array [
  .c0 {
  border-left-color: #0;
}

<div
    className="c0"
  />,
  .c0 {
  border-left-color: #0;
}

<div
    className="c0"
  />,
  .c0 {
  border-left-color: #0;
}

<div
    className="c0"
  />,
  .c0 {
  border-left-color: #0;
}

<div
    className="c0"
  />,
]
`;

exports[`borderLeftColor renders function 1`] = `
Array [
  .c0 {
  border-left-color: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-left-color: has;
}

<div
    className="c0"
  />,
  .c0 {
  border-left-color: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-left-color: has;
}

<div
    className="c0"
  />,
]
`;

exports[`borderLeftColor renders invalid theme path 1`] = `
Array [
  .c0 {
  border-left-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-left-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-left-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-left-color: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`borderLeftColor renders negative number 1`] = `
Array [
  .c0 {
  border-left-color: #-54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-left-color: #-54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-left-color: #-42365;
}

<div
    className="c0"
  />,
  .c0 {
  border-left-color: #-42365;
}

<div
    className="c0"
  />,
]
`;

exports[`borderLeftColor renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  border-left-color: July;
}

@media screen and (min-width:November) {
  .c0 {
    border-left-color: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-left-color: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-left-color: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-left-color: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  border-left-color: July;
}

@media screen and (min-width:November) {
  .c0 {
    border-left-color: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-left-color: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-left-color: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-left-color: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  border-left-color: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-left-color: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-left-color: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-left-color: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-left-color: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  border-left-color: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-left-color: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-left-color: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-left-color: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-left-color: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderLeftColor renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    border-left-color: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-left-color: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-left-color: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-left-color: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    border-left-color: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-left-color: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-left-color: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-left-color: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-left-color: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-left-color: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-left-color: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-left-color: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-left-color: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-left-color: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-left-color: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-left-color: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderLeftColor renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  border-left-color: July;
}

@media May {
  .c0 {
    border-left-color: August;
  }
}

@media April {
  .c0 {
    border-left-color: September;
  }
}

@media January {
  .c0 {
    border-left-color: November;
  }
}

@media April {
  .c0 {
    border-left-color: August;
  }
}

@media June {
  .c0 {
    border-left-color: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  border-left-color: July;
}

@media May {
  .c0 {
    border-left-color: August;
  }
}

@media April {
  .c0 {
    border-left-color: September;
  }
}

@media January {
  .c0 {
    border-left-color: November;
  }
}

@media April {
  .c0 {
    border-left-color: August;
  }
}

@media June {
  .c0 {
    border-left-color: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  border-left-color: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-left-color: November;
  }
}

@media April {
  .c0 {
    border-left-color: January;
  }
}

@media January {
  .c0 {
    border-left-color: December;
  }
}

@media April {
  .c0 {
    border-left-color: April;
  }
}

@media June {
  .c0 {
    border-left-color: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  border-left-color: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-left-color: November;
  }
}

@media April {
  .c0 {
    border-left-color: January;
  }
}

@media January {
  .c0 {
    border-left-color: December;
  }
}

@media April {
  .c0 {
    border-left-color: April;
  }
}

@media June {
  .c0 {
    border-left-color: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderLeftColor renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    border-left-color: July;
  }
}

@media April {
  .c0 {
    border-left-color: August;
  }
}

@media January {
  .c0 {
    border-left-color: September;
  }
}

@media April {
  .c0 {
    border-left-color: November;
  }
}

@media June {
  .c0 {
    border-left-color: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    border-left-color: July;
  }
}

@media April {
  .c0 {
    border-left-color: August;
  }
}

@media January {
  .c0 {
    border-left-color: September;
  }
}

@media April {
  .c0 {
    border-left-color: November;
  }
}

@media June {
  .c0 {
    border-left-color: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-left-color: January;
  }
}

@media April {
  .c0 {
    border-left-color: December;
  }
}

@media January {
  .c0 {
    border-left-color: April;
  }
}

@media April {
  .c0 {
    border-left-color: May;
  }
}

@media June {
  .c0 {
    border-left-color: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-left-color: January;
  }
}

@media April {
  .c0 {
    border-left-color: December;
  }
}

@media January {
  .c0 {
    border-left-color: April;
  }
}

@media April {
  .c0 {
    border-left-color: May;
  }
}

@media June {
  .c0 {
    border-left-color: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderLeftColor renders postitive number 1`] = `
Array [
  .c0 {
  border-left-color: #54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-left-color: #54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-left-color: #42365;
}

<div
    className="c0"
  />,
  .c0 {
  border-left-color: #42365;
}

<div
    className="c0"
  />,
]
`;

exports[`borderLeftColor renders string 1`] = `
Array [
  .c0 {
  border-left-color: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-left-color: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-left-color: June;
}

<div
    className="c0"
  />,
  .c0 {
  border-left-color: June;
}

<div
    className="c0"
  />,
]
`;

exports[`borderLeftColor renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`borderLeftColor renders valid theme path 1`] = `
Array [
  .c0 {
  border-left-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-left-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-left-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-left-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
